Got admin/reports fully functional as far as I'm concerned

--- a/app/views/admin/comments/_comment.html.erb
+++ b/app/views/admin/comments/_comment.html.erb
@@ -1,2 +1,2 @@
-Message: <%= comment.message %> | 
+<strong>Message:</strong> <%= comment.message %> | 
 <%= link_to comment.user.name, [:admin, comment.user] %>
