--- a/app/views/admin/idioms/_idiom.html.erb
+++ b/app/views/admin/idioms/_idiom.html.erb
@@ -1,4 +1,7 @@
 <li>
   <%= link_to idiom.title, admin_idiom_path(idiom) %><br>
+  <p><%= sanitize raw idiom.description %></p>
+  <p><%= sanitize raw idiom.description_right %></p>
   <%= raw idiom.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %>
 </li><br>
+
