--- a/app/views/reports/create.js.erb
+++ b/app/views/reports/create.js.erb
@@ -1,12 +1,1 @@
-<% case @reportable.class.to_s %>
-<% when "Idiom" %>
-  $('<h5>Thank you for reporting abuse</h5>').insertBefore('#abuse')
-  $('#abuse').remove()
-  $('<h5>Thank you for reporting abuse</h5>').insertBefore('#report_idiom')
-  $('#report_idiom').remove()
-<% when "Edit" %>
-  $('<span>Reported</span>').insertBefore('#report_edit_<%= @reportable.id %>')
-  $('#report_edit_<%= @reportable.id %>').remove()
-<% when "Comment" %>
-  $('#report_comment_<%= @reportable.id %>').remove()
-<% end %>
+$('#<%= @reportable.class.to_s.downcase %>_report_<%= @reportable.id %>').html("Abuse Reported")
