refactored a lot of view code, fixed edits

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,4 +74,20 @@ textarea {
   background: #f5faff;
 }
 
+.idiom_link {
+  color: red;
+  font-size: 170%;
+  font-weight: bold; 
+}
+
+.idiom_link:hover {
+  color: red;
+}
+
+#tags {
+  margin-left: 10px;
+}
+
+
+
 
