--- a/app/views/edits/index.html.erb
+++ b/app/views/edits/index.html.erb
@@ -20,8 +20,7 @@
   <h3>Current Description: 
     <small>
       posted at <%= link_to @idiom.updated_at.strftime("%Y-%m-%d %H:%M") %> | 
-    <%= link_to "Report Abuse", [@idiom, @idiom.reports.new], id: "report_idiom",
-      method: :post, remote: true %>
+      <%= report_button @idiom %>
     </small>
   </h3>
   <%= sanitize raw @idiom.description %>
