--- a/app/views/idioms/new.html.erb
+++ b/app/views/idioms/new.html.erb
@@ -4,7 +4,11 @@
 
 <%= simple_form_for @idiom do |f| %>
   <%= f.input :title %>
-<textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20">
+  <%= f.hint "Please give a tweet sized summary" %>
+  <%= f.input :summary %>
+<textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20"> Fill in the left frame
+</textarea>
+<textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20"> Fill in the right frame
 </textarea>
   <%= f.label :tag_list, "Tags, separated by commas" %>
   <%= f.input :tag_list, label: false,  as: :string %>
