--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'The Greatest Site', root_path, class: "brand" %>
+      <%= link_to 'A Mediocre Site', root_path, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
           <li><%= link_to "Users", users_path  %></li>
