--- a/app/views/admin/comments/_comment_info.html.erb
+++ b/app/views/admin/comments/_comment_info.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Ban #{@comment.user.name}", toggle_ban_admin_user_path(@comment.user),
   id: "ban_user_#{@comment.user.id}", remote: true %><br>
-<%= link_to "Delete Comment", admin_comment_path(@comment), method: :delete %><br>  
+<%= link_to "Delete Comment", admin_comment_path(@comment), method: :delete,
+  confirm: "Are you sure?", remote: true %><br>  
 <%= link_to "Edit Comment", edit_admin_comment_path(@comment) %><br>
 <%= link_to "Mark as resolved", admin_report_path(@comment.reports.first, resolved: "resolved"), 
   method: :put, id: "resolve_report", confirm: "Are you sure?", remote: true  %>
