--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -17,9 +17,9 @@
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              users_path, :class => 'btn'  %>
+              admin_users_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_user_path(@user), :class => 'btn' %>
+              edit_admin_user_path(@user), :class => 'btn' %>
   <% if @user.banned? %>            
   <%= link_to "Unbanhammer", toggle_ban_admin_user_path(@user), id: "toggle_user_#{@user.id}", 
      class: "btn btn-danger", remote: true %>    
