--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -12,12 +12,17 @@
 
 <% if signed_in? %>
   <%= content_for :sidebar do %>
+    <% if @meetups.any? %>
     <h4><%= link_to "See all meetups for #{@idiom.title} near #{current_user.zip_code}",
           '#', id: "display_meetups" %></h4>
     <ul id="meetups">
       <% @meetups.each do |meetup| %>
         <li><%= link_to meetup.name, [@idiom, meetup] %></li>
       <% end %>
+    <% else %>
+    <h4>No Meetups found for <%= @idiom.title %> near <%= current_user.zip_code %></h4>
+    <% end %>
+    <hr>
     </ul>
     <h4>Please give us your feedback</h4>  
     <p>Upvote for a good description.  You can see more possibilities
@@ -37,7 +42,6 @@
         downvoted_by_user?(current_user) %>
       </span>
     <% end %>  
-    
     <div id="abuse">
     <% if signed_in? %>
       <%= report_button @idiom %>
@@ -58,7 +62,7 @@
 <% end %>
 
 <%= content_for :bottom_frame do %>
-
+  <% if signed_in? %>
   <h2>Comments</h2>
   <div class="comments">
     <ul>
@@ -66,13 +70,14 @@
     </ul>
   </div>
 
-
   <h3><%= link_to "(+) Add a comment", '#', id: "create_new_comment" %></h3>
-  <% if signed_in? %>
     <%= simple_form_for [@idiom, Comment.new], remote: true do |f| %>
       <%= f.input :message %>
       <%= f.button :submit %>
     <% end %>
+  <% else %>
+  <h2>Login to see comments</h2>
   <% end %>
+
 
 <% end %>
