trying to fix bugs as they pop up, in a manner not appropriate with real coding

--- a/app/views/idioms/new.html.erb
+++ b/app/views/idioms/new.html.erb
@@ -9,7 +9,7 @@
   <%= f.input :summary %>
 <textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20"> Fill in the left frame
 </textarea>
-<textarea class="text required redactor" cols="40" rows="120" id="idiom_description" name="idiom[description]" rows="20"> Fill in the right frame
+<textarea class="text required redactor" cols="40" rows="120" id="idiom_description_right" name="idiom[description_right]" rows="20"> Fill in the right frame
 </textarea>
   <%= f.label :tag_list, "Tags, separated by commas" %>
   <%= f.input :tag_list, label: false,  as: :string %>
