--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'A Mediocre Site', root_path, class: "brand" %>
+      <%= link_to 'Learn to Program', root_path, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
           <li><%= link_to "Users", users_path  %></li>
@@ -14,13 +14,35 @@
           <li><%= link_to "Blog", "#"  %></li>
         </ul>
         <ul class="nav pull-right">
+          <% if signed_in? && current_user.admin? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Admin Dashboard
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Index", admin_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Manage Reported Objects", admin_reports_path %></li>
+              <li><%= link_to "Manage Users", admin_users_path %></li>
+              <li><%= link_to "Manage Announcements", admin_announcements_path %></li>
+            </ul>
+          </li>
+          <% end %>
           <% if signed_in? %>
-          <li><%= link_to "Dashboard", admin_path if current_user.admin? %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Settings
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "Sign Out", logout_path, method: :delete %></li>
+            </ul>
+          </li>
           <li><%= link_to "Inbox (#{current_user.inbox.unread_count})", 
             [current_user, current_user.inbox] %></li>
-          <li><%= link_to "Sign out", logout_path, method: :delete  %></li>
           <% else %>
-          <li><%= link_to "Sign in with Facebook", '/auth/facebook' %></li>
           <li><%= link_to "Sign up", new_user_path  %></li>
           <li><%= link_to "Sign In", sign_in_path  %></li>
           <% end %>
