--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -41,7 +41,7 @@
             </ul>
           </li>
           <li><%= link_to "Inbox (#{current_user.inbox.unread_count})", 
-            [current_user, current_user.inbox] %></li>
+            user_inbox_path(current_user) %></li>
           <% else %>
           <li><%= link_to "Sign up", new_user_path  %></li>
           <li><%= link_to "Sign In", sign_in_path  %></li>
