--- a/app/views/idioms/edit.html.erb
+++ b/app/views/idioms/edit.html.erb
@@ -1,8 +1,7 @@
 <%= content_for(:title) { "Edit #{@idiom.title}"} %>
 
 
-<% if params[:frame] == "right" %>
-  <h1>Edit <%= link_to @idiom.title, @idiom %>: Right Frame</h1>
+  <h1>Edit <%= link_to @idiom.title, @idiom %></h1>
 
   <h3>Your edits will be logged</h3>
 
@@ -11,34 +10,21 @@
   <%= simple_form_for @idiom do |f| %>
     <%= f.hidden_field :title, value: @idiom.title %>
     <%= f.hidden_field :summary, value: @idiom.summary %>
-    <%= f.hidden_field :description, value: @idiom.description %>
-  <textarea class="text required redactor" id="edit_idiom" name="idiom[description_right]" rows="20">
-    <%= sanitize raw @idiom.description_right %>
-  </textarea>
+    <% if params[:frame] == "right" %>
+      <%= f.hidden_field :description, value: @idiom.description %>
+      <%= f.label "Right Frame" %>
+      <textarea class="text required redactor" id="edit_idiom" name="idiom[description_right]" rows="20">
+        <%= sanitize raw @idiom.description_right %>
+      </textarea>
+    <% else %>
+      <%= f.hidden_field :description_right, value: @idiom.description_right %>
+      <%= f.label "Left Frame" %>
+      <textarea class="text required redactor" id="edit_idiom" name="idiom[description]" rows="20">
+        <%= sanitize raw @idiom.description %>
+      </textarea>
+    <% end %>
     <%= f.label :tag_list, "Tags, separated by commas" %>
     <%= f.input :tag_list, label: false,  as: :string %>
     <%= f.button :submit %>
   <% end %>
-
-<% else %>
-  <h1>Edit <%= link_to @idiom.title, @idiom %>: Left Frame</h1>
-
-  <h3>Your edits will be logged</h3>
-
-  <%= link_to "Edits History", idiom_edits_path(@idiom) %>
-
-  <%= simple_form_for @idiom do |f| %>
-    <%= f.hidden_field :title, value: @idiom.title %>
-    <%= f.hidden_field :summary, value: @idiom.summary %>
-    <%= f.hidden_field :description_right, value: @idiom.description_right %>
-  <textarea class="text required redactor" id="edit_idiom" name="idiom[description]" rows="20">
-    <%= sanitize raw @idiom.description %>
-  </textarea>
-    <%= f.label :tag_list, "Tags, separated by commas" %>
-    <%= f.input :tag_list, label: false,  as: :string %>   
-    <%= f.button :submit %>
-  <% end %>
-
-<% end %>  
-
 
