--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -1,4 +1,5 @@
 <%= content_for(:title) { "Meetup show page" } %>
+<%= content_for(:scripts) { javascript_include_tag 'meetups' } %>
 
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&sensor=false"></script>
 <script type="text/javascript">
