changed home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,8 @@
 <div class="hero-unit">
   <h1>Learn to Program!</h1>
   <p>This is a site to help with bringing together information about how to
-    effectively self-teach programming languages</p>    
+    effectively self-teach programming languages</p>
+    <%= link_to "About the site and Charlie Sahlman", 'pages/about' %>    
 </div>
 <% unless signed_in? %>
 <div class="logins">
@@ -24,5 +25,3 @@
   </span>
 </div>
 <% end %>
-
-<span>PLACEHOLDER FOR RECENTLY EDITED SHIT</span>
