--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h2>Designed originally as a wikipedia style site for learning to program</h2>
+
+<p>This site has evolved over the past few weeks.  It is primarily a test site to 
+test and create new features as I see fit, deploy, and display them to the world.  
+It has a lot of different features built largely from scratch. 
+<%= link_to "Github for project", 'https://github.com/csahlman/bssproject' %>
+I will be updating this with a list of features shortly.  Check back soon.</p>
