--- a/app/views/admin/announcements/index.html.erb
+++ b/app/views/admin/announcements/index.html.erb
@@ -1,3 +1,6 @@
+<%= content_for(:scripts) do %>
+  <%= javascript_include_tag 'admin/announcements' %>
+<% end %>
 <h1>Manage Announcements</h1>
 
 <h3>Current: </h3>
